--- a/main.css
+++ b/main.css
@@ -1,21 +1,10 @@
-html body {
-    background: url('https://images.unsplash.com/photo-1523961131990-5ea7c61b2107?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dGVjaCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60') !important;
-}
-
-.blob-code-inner .blob-code-maker .js-file-line{
- background-color: aquamarine !important;   
- color: red !important;
- font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
-}
-
-
-tbody div{
+/* tbody div{
     color: red !important;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
 }
 .gh-header-title .mb-2 .lh-condensed .f1 .mr-0 .flex-auto .wb-break-word{
     color: red !important;
-}
+} */
 
 /* tr[data-hunk="43e18a17f3051607c2e7c1980f646ebf79177fcc6e76bf2b34b59eed64846b53"] {
     --color-diff-blob-addition-num-bg: rgba(46,160,255,0.3);;
@@ -26,7 +15,7 @@ tbody div{
     --color-diff-blob-deletion-word-bg: rgba(46,160,255,0.4);
 } */
 
-tr[data-hunk="760f3d75e2494f7561766d429d0205c94d08ed2f41c8367f83b8f5353ec4be1c"]{
+/* tr[data-hunk="760f3d75e2494f7561766d429d0205c94d08ed2f41c8367f83b8f5353ec4be1c"]{
     --color-diff-blob-addition-num-bg: rgb(172, 178, 0);;
     --color-diff-blob-deletion-num-bg: rgb(172, 178, 0);
 }
@@ -37,133 +26,7 @@ tr[data-hunk="9ab7f36934cf29a090a7f1f7f432ab43eda8cf806712acde424581fcf2a221ca"]
 
 #file-tree-item-diff-62634260ec776f4d9c9922dc6c011da9447d74155a7da29e6364b5566710ff22 ,#file-tree-item-diff-96e41a6ffffa69a60e844da102b7e32039fabb7abe97a0947df5199d5a22498b{
     background-color: rgb(122, 126, 0);
-    background-color: rgb(122, 126, 0);
+    background-color: rgb(164, 167, 0);
 }
+ */
 
-
-
-
-/* high  */
-
-/* #issue_16, #issue_36401, #issue_36399, #issue_36389 {
-    background-color:rgb(61, 0, 0);
-}
-#issue_16_link::before, #issue_36401_link::before, #issue_36399_link::before, #issue_36389_link::before {
-    background-color:red;
-    content: 'Important';
-    color: white;
-    width: 12px;
-    height: 12px;
-    border: rgb(45, 0, 0);
-    border-radius: 5px;
-    margin-right: 10px;
-    padding: 2px;
-} */
-
-
-
- #issue_36401 {
-    /* background-color:rgb(61, 0, 0); */
-    background-color:rgb(107, 12, 0);
-}
-#issue_16_link::before, #issue_36401_link::before {
-    background-color:red;
-    content: 'Important';
-    color: white;
-    width: 12px;
-    height: 12px;
-    border: rgb(45, 0, 0);
-    border-radius: 5px;
-    margin-right: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 2px;
-}
-
-
-/* medium */
-/* #issue_9, #issue_36400, #issue_36398, #issue_36394, #issue_36403{
-    background-color:rgb(86, 86, 0);
-}
-
-#issue_9_link::before, #issue_36400_link::before, #issue_36398_link::before, #issue_36394_link::before, #issue_36403_link::before{
-    content: 'Relevant';
-    color: white;
-    width: 12px;
-    height: 12px;
-    border: 1px rgb(83, 69, 0) solid;
-    border-radius: 5px;
-    background-color: rgb(172, 178, 0);
-    margin-right: 10px;
-    padding: 2px;
-} */
-
-
-#issue_36398, #issue_36403{
-    background-color:rgb(86, 86, 0);
-}
-
-#issue_9_link::before,#issue_36398_link::before, #issue_36403_link::before{
-    content: 'Relevant';
-    color: white;
-    width: 12px;
-    height: 12px;
-    border: 1px rgb(83, 69, 0) solid;
-    border-radius: 5px;
-    background-color: rgb(172, 178, 0);
-    margin-right: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 2px;
-}
-
-
-/* low */
-/* 
-#issue_36401, #issue_36397, #issue_36402, #issue_36388,#issue_8,#issue_2{
-    background-color:rgb(7, 86, 0);
-} */
-
-#Low{
-    color: white;
-    background-color:rgb(52, 194, 0);
-    width: 12px;
-    height: 13px;
-    padding-top:2px;
-    padding-bottom: 2px;
-    padding-left: 3px;
-    padding-right: 3px;
-    border-radius: 5px;
-    margin-right: 3px;
-    margin-left: 3px    ;
-}
-
-
-#Medium{
-    color: white;
-    background-color:rgb(172, 178, 0);
-    width: 12px;
-    height: 13px;
-    padding-top:2px;
-    padding-bottom: 2px;
-    padding-left: 3px;
-    padding-right: 3px;
-    border-radius: 5px;
-    margin-right: 3px;
-    margin-left: 3px    ;
-}
-
-
-#High{
-    color: white;
-    background-color:red;
-    width: 12px;
-    height: 13px;
-    padding-top:2px;
-    padding-bottom: 2px;
-    padding-left: 3px;
-    padding-right: 3px;
-    border-radius: 5px;
-    margin-right: 3px;
-    margin-left: 3px    ;
-}
