--- a/popup/popup_css.css
+++ b/popup/popup_css.css
@@ -8,33 +8,41 @@ a {
 }
 
 body {
-	min-width: 330px;
-	min-height: 300px;
+	margin: 0px !important;
+	width: 300px;
+	min-height: 200px;
+	padding: 20px;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.main {
+.container {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
 	background-color: rgb(255, 255, 255);
-	padding: 20px;
 }
 
 .heading {
 	display: flex;
 	align-items: center;
-	width: 95%;
+	width: 100%;
 	margin: auto;
 	margin-bottom: 15px;
 }
 
 .heading_text {
-	margin-top: 2px;
+	margin-top: auto;
+	margin-bottom: auto;
 	font-size: large;
 	font-weight: bold;
+	flex-grow: 1;
 }
 
 .heading_logo {
 	width: 12%;
-	height: 12%;
 	border-radius: 100%;
 	margin-right: 5px;
 }
@@ -47,6 +55,7 @@ body {
 }
 
 .second_box {
+	width: 100%;
 	display: flex;
 	align-items: center;
 	background-color: rgb(180, 211, 255);
@@ -56,7 +65,6 @@ body {
 
 .light-icon {
 	width: 15%;
-	height: 30%;
 	transform: rotate(20deg)
 }
 
@@ -74,41 +82,84 @@ li {
 
 }
 
-.signup_option {
-	color: rgb(158, 158, 158);
-	margin-top: 15px;
-}
-
-.signUp {
-	color: blue;
-}
-
-#signUpButton {
-	margin-top: 20px;
-}
-
-.signInButton {
-	background-color: blue;
-	color: white;
-	padding: 7px;
-	padding-left: 30px;
-	padding-right: 30px;
-	width: 40%;
-	border-radius: 5px;
-	font-size: 15px;
-	margin-top: 20px;
-	margin-bottom: 8px;
-}
-
 .profile_picture {
+	width: 4rem;
+	height: 4rem;
 	border-radius: 50%;
-}
-
-#salutation {
-	margin-left: 1em;
+	margin-right: 0.5rem;
 }
 
 #user_div {
+	flex-grow: 1;
+	min-height: 150px;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
+	justify-content: space-evenly;
+}
+
+#google-form,
+#github-form,
+#bitbucket-form {
+	width: 100%;
+}
+
+.button {
+	border: 1px solid #e4e4e7;
+	color: #333333;
+	text-decoration: none;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+	border-radius: 0.375rem;
+	width: 100%;
+	height: 2.5rem;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	cursor: pointer;
+	padding: 0 1.5rem;
+	margin-top: 0.5rem;
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.button:hover {
+	background-color: #f4f4f5;
+}
+
+.button:active {
+	background-color: #e4e4e7;
+}
+
+.button>img {
+	width: 1rem;
+	height: 1rem;
+	margin-right: 0.75rem;
+}
+
+#login-div,
+#session-div {
+	display: none;
+}
+
+.loader {
+	border: 3px solid #f3f3f3;
+	border-top: 3px solid #414141;
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	animation: spin 0.3s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
